apps/erin-apps/bsky-pds/sea1/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pds
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: atproto-pds.owo.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pds
                port:
                  number: 80
---
